@@ -1,0 +1,26 @@
+<grammar xmlns="http://relaxng.org/ns/structure/1.0">
+
+  <include href="inline2.rng"/>
+
+  <start>
+    <element name="doc">
+      <zeroOrMore>
+	<element name="p">
+	  <ref name="inline"/>
+	</element>
+      </zeroOrMore>
+    </element>
+  </start>
+
+  <define name="inline.class" combine="choice">
+    <choice>
+      <element name="code">
+	<ref name="inline"/>
+      </element>
+      <element name="em">
+	<ref name="inline"/>
+      </element>
+    </choice>
+  </define>
+  
+</grammar>
